fixed figure sizes for chapter 5

--- a/PFE/latex/chap5.tex
+++ b/PFE/latex/chap5.tex
@@ -72,7 +72,7 @@ This soft-max classifies each pixel independently. The output of the soft-max cl
 \begin{figure}[H]
 \centering
   \vspace{-0.1in}
-    \centerline{\includegraphics[width = 4in, height = 2.2in]{../images/segnet.png}}
+    \centerline{\includegraphics[width = 3.5in]{../images/segnet.png}}
     \caption{SegNet architecture}
 \end{figure}
 
@@ -143,7 +143,7 @@ Here is a schema presenting the previously mentioned steps:
 \begin{figure}[H]
 \centering
   \vspace{-0.1in}
-    \centerline{\includegraphics[width = 7in, height = 2in]{../images/watershed.png}}
+    \centerline{\includegraphics[width = 7in]{../images/watershed.png}}
     \caption{Watershed schema applied to count white blood cells}
 \end{figure}
 
@@ -211,7 +211,7 @@ To further illustrate this, if an input image was 100\% black, the output predic
 \begin{figure}[H]
 \centering
   \vspace{-0.1in}
-    \centerline{\includegraphics[width = 3.4in, height = 1.6in]{../images/class_imbalance.png}}
+    \centerline{\includegraphics[width = 3.4in]{../images/class_imbalance.png}}
     \caption{Example class imbalance}
 \end{figure}
 
@@ -250,7 +250,7 @@ When applied to Boolean data, using the definition of true positive (TP), false 
 \begin{figure}[H]
 \centering
   \vspace{-0.1in}
-    \centerline{\includegraphics[width = 4in, height = 2.5in]{../images/DSC.png}}
+    \centerline{\includegraphics[width = 4.8in]{../images/DSC.png}}
     \caption{Example explaining Dice coefficient}
     \label{fig:DSC_EX}
 \end{figure}
